--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Norwegian drama'
 - !lcc 'PT'
+- GITenberg
 title: 'Pikku Eyolf: Kolminäytöksinen näytelmä'
 url: http://www.gutenberg.org/ebooks/17788
